@@ -32,10 +32,12 @@ grp_io.add_option("-o", "--oldext", dest="oldext",
 grp_io.add_option("-n", "--newext", dest="newext",
                   metavar="<output file extension>",
                   default=".output",
-                  help="output file extension (default: \".out\")")
+                  help="output file extension (default: \".output\")")
 parser.add_option_group(grp_io)
 
 # model
+default_module = "treefix.models.raxmlmodel.RAxMLModel"
+default_smodule = "treefix.models.duplossmodel.DupLossModel"
 grp_model = optparse.OptionGroup(parser, "Model")
 grp_model.add_option("--type", dest="type",
                      default=None,
@@ -84,15 +86,19 @@ def get_module(mname):
 # check arguments
 
 # required options
-if (not options.type) or (not options.module):
-    parser.print_help()
-    sys.exit(1)
+if not options.type:
+    parser.error("--type required")
+if not options.module:
+    if options.type == "likelihood":
+        options.module = default_module
+    else:
+        options.module = default_smodule
 
 # help
 if options.show_help:
     module = get_module(options.module)
     module.print_help()
-    sys.exit(1)
+    sys.exit(0)
 
 # determine input files
 treefiles = common.get_input_files(parser, options, args)
@@ -148,6 +154,7 @@ for treefile in treefiles:
         
         # compute likelihood or cost
         if options.type == "likelihood":
+            
             pval, Dlnl = module.compute_lik_test(gtree, options.test)
             print >>out, "%.6g\t%.6g" % (pval, Dlnl)
                
